Polish production alias settings and rule labels (#198)
* fix: polish production alias settings controls

* docs: document production aliases and SCG013

* test: cover alias reset and SCG013 label

* fix: preserve production alias display order